--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="12.png">
+<link rel="apple-touch-icon" sizes="180x180" href="12.png">
     <title>Professional Calorie Calculator</title>
     
     <!-- Підключаємо сучасний шрифт Inter -->
