--- a/index.html
+++ b/index.html
@@ -487,19 +487,52 @@
             background-color: var(--bg-input);
             border: 1px solid var(--border-color);
             border-radius: var(--radius-lg);
-            padding: 1.5rem;
+            padding: 1.5rem; /* Default padding */
             display: flex;
             flex-direction: column;
             gap: 1rem;
         }
+
+        /* Compressed BMR Card style */
+        .bmr-card {
+            padding: 0.75rem 1rem; /* Reduced padding for BMR */
+            gap: 0.5rem;
+        }
         
         .bmr-title {
-            font-size: 1.2rem;
+            font-size: 1rem; /* Smaller header for BMR */
             font-weight: 800;
             color: var(--text-main);
-            margin-bottom: 0.25rem;
+            margin-bottom: 0;
             text-transform: uppercase;
             letter-spacing: 0.5px;
+        }
+
+        /* BMR Grid for 1 row layout */
+        .bmr-grid {
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            gap: 0.75rem;
+        }
+
+        .bmr-grid .form-group {
+            gap: 0.25rem;
+            text-align: center;
+            margin: 0;
+        }
+
+        .bmr-grid label {
+            font-size: 0.8rem;
+            font-weight: 600;
+            color: var(--text-muted);
+            margin: 0;
+        }
+
+        .bmr-grid input {
+            text-align: center;
+            padding: 0.5rem;
+            font-size: 1.1rem;
+            height: auto;
         }
 
         /* New TDEE Title Style */
@@ -858,18 +891,18 @@
                 <!-- BMR Calculation Group -->
                 <div class="bmr-card">
                     <div class="bmr-title">РОЗРАХУНОК BMR</div>
-                    <div class="macro-group">
+                    <div class="bmr-grid">
                         <div class="form-group">
                             <label for="age">Вік</label>
-                            <input type="number" id="age" value="23" required>
+                            <input type="number" id="age" value="23" placeholder="років" required>
                         </div>
                         <div class="form-group">
-                            <label for="weight">Вага (кг)</label>
-                            <input type="number" id="weight" value="71" required>
+                            <label for="weight">Вага</label>
+                            <input type="number" id="weight" value="71" placeholder="кг" required>
                         </div>
                         <div class="form-group">
-                            <label for="height">Зріст (см)</label>
-                            <input type="number" id="height" value="176" required>
+                            <label for="height">Зріст</label>
+                            <input type="number" id="height" value="176" placeholder="см" required>
                         </div>
                     </div>
                 </div>
